fix start_cluster to allow dynamic add any number of node with the avaliable port number

--- a/nodes_config.json
+++ b/nodes_config.json
@@ -1,6 +1,10 @@
 {
-    "node1": {"address": "localhost:50051", "port": 50051},
-    "node2": {"address": "localhost:50052", "port": 50052},
-    "node3": {"address": "localhost:50053", "port": 50053}
+  "node1": {
+    "address": "localhost:50076",
+    "port": 50076
+  },
+  "node2": {
+    "address": "localhost:50077",
+    "port": 50077
   }
-  
+}
